# src/dto/console.dto.ts
@@ -1,5 +1,5 @@
 export interface ConsoleDTO {
   id?: number;
-  name: string;
-  manufacturer: string;
+  name?: string;
+  manufacturer?: string;
 }
