# src/dto/review.dto.ts
@@ -1,4 +1,8 @@
 import { GameDTO } from "./game.dto";
 
 export interface ReviewDTO {
+    id?: number;
+    review_text: string;
+    rating: number;
+    game?: GameDTO;
 }
